# csprUSD

./: Cargo.toml  LICENSE  Makefile  README.md
csprusd/: Cargo.toml
csprusd-test-contract/: Cargo.toml
csprusd-test-contract/src/: main.rs
csprusd/src/: allowances.rs  assertion_utils.rs  balances.rs  blacklisting.rs  constants.rs  entry_points.rs  error.rs  events.rs  main.rs  minters.rs  utils.rs
tests/: Cargo.toml
tests/contract_versions/: readme.txt
tests/contract_versions/v0/: csprusd_v0.wasm
tests/contract_versions/v1/: csprusd.wasm  v1_source.rs
tests/src/: allowance.rs  blacklisting.rs  contract_upgrade.rs  install.rs  lib.rs  master_minter.rs  mint_and_burn.rs  ownership.rs  take_a_pause.rs  transfer.rs
tests/src/utility/: constants.rs  installer_request_builders.rs
tests/wasm/: csprusd.wasm  csprusd_test_contract.wasm
