[package]
name = "tests"
version = "1.0.0"
edition = "2018"
authors = ["Michał Papierski <michal@casperlabs.io>", "Kovacs Boldizsar"]

[dependencies]
casper-types = "2.0.0"
casper-engine-test-support = "4.0.0"
casper-execution-engine = "4.0.0"
once_cell = "1.16.0"
hex = { version = "0.4.3", default-features = false }

[lib]
name = "tests"
bench = false
doctest = false
